--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="shortcut icon" href="public/favicon.ico" />
-    <title>Hello, world!</title>
+    <title>Milliways</title>
   </head>
   <body>
     <main class="text-center">
-      <img
-        class="img-thumbnail rounded-circle bg-light"
-        src="public/cat.png"
-        alt="Professor Meow"
-      />
-      <p class="mt-3">
-        Greetings children! It smells like new fishes 🐟 in here.
-      </p>
+      <h1>
+        Milliways – The Restaurant at the <strong> of the Universe</strong>
+      </h1>
     </main>
   </body>
 </html>
