Add colors and Backgroundimage

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,30 @@
     />
     <link rel="shortcut icon" href="public/favicon.ico" />
     <title>Milliways</title>
+
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Warnes&display=swap");
+    </style>
   </head>
   <body>
-    <main class="text-center">
-      <h1>
-        Milliways – The Restaurant at the <strong> of the Universe</strong>
-      </h1>
-    </main>
+    <div
+      style="
+        background: url(https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA22564.jpg);
+      "
+      class="jumbotron bg-cover text-white"
+    >
+      <div class="container py-5 text-center">
+        <h1 class="display-4 font-weight-bold">
+          <h1 class="text-primary">Milliways  </h1>
+            
+          <div><strong class="text-secondary">Milliways – The Restaurant at the End of the Universe</strong>
+          </div>
+    
+        <p class="font-italic mb-0">
+          <input type="text" placeholder="Search for Food" />
+        </p>
+      </div>
+    </div>
   </body>
 </html>
