--- a/src/index.html
+++ b/src/index.html
@@ -16,22 +16,90 @@
   </head>
   <body>
     <div
-      style="
-        background: url(https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA22564.jpg);
-      "
-      class="jumbotron bg-cover text-white"
+    class = "jumbotron bg-cover text-white header-background rotate linear infinite"
     >
       <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">
-          <h1 class="text-primary">Milliways  </h1>
+          <h1 class="text-primary titlename">Milliways  </h1>
             
-          <div><strong class="text-secondary">Milliways – The Restaurant at the End of the Universe</strong>
+          <div><strong class="text-secondary subtitle">The Restaurant at <br> the End of the Universe</strong>
           </div>
     
-        <p class="font-italic mb-0">
-          <input type="text" placeholder="Search for Food" />
+        <p class="font-italic mb-0 topspace">
+          <input type="text" placeholder="Galactic Food Search" />
         </p>
       </div>
     </div>
+<section>
+
+  <div class="container topspace">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1571881319009-691f808b7e8c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1955&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+          <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1581413397207-3e3654abd347?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1991&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1566751640620-a9dd00cfbab4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1334&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1571881319009-691f808b7e8c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1955&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+          <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1581413397207-3e3654abd347?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1991&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="https://images.unsplash.com/photo-1566751640620-a9dd00cfbab4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1334&q=80"  class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Xxxxxxx</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi atque optio laudantium animi recusandae consectetur amet cupiditate odio, fugit iste.</p>
+            <a href="#" class="btn btn-secondary">Bla Bla</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
   </body>
 </html>
