--- a/src/index.html
+++ b/src/index.html
@@ -561,7 +561,7 @@
             <input
               class="form-control py-2 rounded-pill mr-1 pr-5"
               type="search"
-              placeholder="Search for us in your Dimemsion"
+              placeholder="Look for us in your Dimension"
             />
             <span class="input-group-append">
               <button class="btn rounded-pill border-0 ml-n5" type="button">
