--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="shortcut icon" href="public/favicon.ico" />
-    <title>Hello, world!</title>
+    <title>Milliways</title>   
   </head>
   <body>
-<<<<<<< main
-    <main class="text-center">
-      <img
-        class="img-thumbnail rounded-circle bg-light"
-        src="public/cat.png"
-        alt="Professor Meow"
-      />
-      <p class="mt-3">
-        Greetings children! It smells like new fishes 🐟 in here.
-=======
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Milliways</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,22 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Gerichte</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Unsere Station</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link disabled"
-                href="#"
-                tabindex="-1"
-                aria-disabled="true"
-                >Disabled</a
-              >
+              <a class="nav-link" href="#">Anflug</a>
             </li>
           </ul>
         </div>
@@ -218,7 +200,7 @@
     <footer>
       <p class="text-center">
         - : <blink>Blinktags are not as bad as they look</blink> : -
->>>>>>> local
+
       </p>
     </main>
   </body>
